[project]
name = "pvb-cs2"
version = "0.1.0"
description = "Pivo"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
    "fastapi>=0.128.4",
    "uvicorn>=0.40.0",
    "demoparser2>=0.40.3",
    "motor>=3.7.1",
    "asyncio>=4.0.0",
    "redis>=7.1.0",
    "celery>=5.6.2",
    "aiohttp>=3.13.3",
    "celery-types>=0.24.0",
    "asgiref>=3.11.1",
]
